Added easier methods for API
Added a config option to censor the full word and not leave the ends uncensored